--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,23 @@ code {
 
   margin-bottom: 30px;
 }
+
+.nav {
+  border-radius: 2px;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.418);
+}
+
+@keyframes loader {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+.loader-container {
+  animation: loader 0.5s ease-in alternate infinite;
+  margin: auto;
+}
